min 0 to input number on stickers

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="sticker">
                         <img src="assets/img/c9.png" alt="">
                         <label for="c9">cantidad stickers</label>
-                        <input type="number" id="c9" value="0">
+                        <input type="number" id="c9" value="0" min="0">
                     </div>
                     <div class="sticker">
                         <img src="assets/img/spirit.png" alt="">
