add value 0 on selects

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="container4">
                 <div class="opciones">
                     <select name="num1" id="num1">
+                        <option value="1">0</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
@@ -27,6 +28,7 @@
                         <option value="9">9</option>
                     </select>
                     <select name="num2" id="num2">
+                        <option value="1">0</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
@@ -38,6 +40,7 @@
                         <option value="9">9</option>
                     </select>
                     <select name="num3" id="num3">
+                        <option value="1">0</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
